findById 쿼리문 추가!
민

--- a/src/main/webapp/WEB-INF/classes/sql/user/user-query.properties
+++ b/src/main/webapp/WEB-INF/classes/sql/user/user-query.properties
@@ -3,7 +3,7 @@
 ######################################
 
 ##########minseo query begin#############
-
+findById = select * from member where member_id = ?
 ##########minseo query end#############
 
 
