findById properties 수정!

--- a/src/main/resources/sql/user/user-query.properties
+++ b/src/main/resources/sql/user/user-query.properties
@@ -3,7 +3,7 @@
 ######################################
 
 ##########minseo query begin#############
-
+findById = select * from kh_user where user_id = ?
 ##########minseo query end#############
 
 
