insertUser query 생성!

--- a/src/main/resources/sql/user/user-query.properties
+++ b/src/main/resources/sql/user/user-query.properties
@@ -8,5 +8,5 @@ findById = select * from kh_user where user_id = ?
 
 
 ##########janghoon query begin#############
-
+insertUser = insert into kh_user values (?, default, ?, ?, ?, ?, ?, ?, default, default)
 ##########janghoon query end#############
