user-query.properties 수정!

--- a/src/main/resources/sql/user/user-query.properties
+++ b/src/main/resources/sql/user/user-query.properties
@@ -9,4 +9,4 @@ findById = select * from kh_user where user_id = ?
 
 ##########janghoon query begin#############
 insertUser = insert into kh_user values (?, default, ?, ?, ?, ?, ?, ?, default, default)
-##########janghoon query end#############
+##########janghoon query end###############
