--- a/src/main/resources/sql/user/user-query.properties
+++ b/src/main/resources/sql/user/user-query.properties
@@ -10,3 +10,8 @@ findById = select * from kh_user where user_id = ?
 ##########janghoon query begin#############
 insertUser = insert into kh_user values (?, default, ?, ?, ?, ?, ?, ?, default, default)
 ##########janghoon query end#############
+
+##########jaekyung query begin#############
+findAll = select * from ( select row_number () over (order by enroll_date desc) rnum, u.* from kh_user u ) u where rnum between ? and ?
+getTotalContent = select count(*) from kh_user
+##########jaekyung query end#############
