--- a/src/main/webapp/WEB-INF/classes/sql/user/user-query.properties
+++ b/src/main/webapp/WEB-INF/classes/sql/user/user-query.properties
@@ -4,6 +4,7 @@
 
 ##########minseo query begin#############
 findById = select * from kh_user where user_id = ?
+editUser = update user set  user_name = ?, birthday = ?, email = ?, phone = ?, address = ? where user_id = ?
 ##########minseo query end#############
 
 
