--- a/src/main/resources/sql/mypage/mypage-query.properties
+++ b/src/main/resources/sql/mypage/mypage-query.properties
@@ -3,5 +3,7 @@
 #########################################
 
 ##########janghoon query begin#############
-inquireListFindById = select * from (select row_number() over(order by pro_no desc) rnum, p.*, (select pro_original_filename from product_attachment where pro_no=p.pro_no) pro_original_filename from product p) p where rnum between ? and ?
+inquireListFindById = select * from ( select row_number() over(order by inquire_date desc) rnum, i.*, (select count(*) from inquire inq where i.inquire_no = inq.inquire_answer_ref) answer_status from inquire i where user_id = ?) i where rnum between ? and ?
+getTotalMyInquireContent = select count(*) from inquire where user_id = ?
+myInquireDelete = delete from inquire where inquire_no = ?
 ##########janghoon query end##############
