검색기능, 약간의 css..!!!!!!!!!!!!!!!하기싫어

--- a/src/main/resources/sql/product/product-query.properties
+++ b/src/main/resources/sql/product/product-query.properties
@@ -7,3 +7,4 @@ getTotalContent = select count(*) from product
 findByProNo = select * from product where pro_no = ?
 findProductAttachmentByProductProNo = select * from product_attachment where pro_no = ?
 productAttachmentFindAll = select * from product_attachment
+productFind = select * from ( select row_number () over (order by reg_date desc) rnum, p.* from product p where pro_name like ? ) p where rnum between ? and ?
