상품 정렬..이 될꺼에요..아마두

--- a/src/main/resources/sql/product/product-query.properties
+++ b/src/main/resources/sql/product/product-query.properties
@@ -8,3 +8,4 @@ findByProNo = select * from product where pro_no = ?
 findProductAttachmentByProductProNo = select * from product_attachment where pro_no = ?
 productAttachmentFindAll = select * from product_attachment
 productFind = select * from ( select row_number () over (order by reg_date desc) rnum, p.* from product p where pro_name like ? ) p where rnum between ? and ?
+productAlign = select * from ( select row_number () over (order by ? desc) rnum, p.* from product p) p where rnum between ? and ?
