내 게시글 조회 - 커뮤니티 기능 구현

--- a/src/main/resources/sql/mypage/mypage-query.properties
+++ b/src/main/resources/sql/mypage/mypage-query.properties
@@ -6,4 +6,5 @@
 inquireListFindById = select * from ( select row_number() over(order by inquire_date desc) rnum, i.*, (select count(*) from inquire inq where i.inquire_no = inq.inquire_answer_ref) answer_status from inquire i where user_id = ?) i where rnum between ? and ?
 getTotalMyInquireContent = select count(*) from inquire where user_id = ?
 myInquireDelete = delete from inquire where inquire_no = ?
+communityListFindById = select * from (select row_number() over(order by comm_date desc) rnum, c.* from community c where user_id = ?) c where rnum between ? and ?
 ##########janghoon query end##############
