게시글 상세보기 css 살짝 수정/ 페이지바, 정보공유 번호 쿼리 수정

--- a/com/main/resources/sql/community/community-query.properties
+++ b/com/main/resources/sql/community/community-query.properties
@@ -1,7 +1,8 @@
 ##########################
 # community-query.properties #
 ##########################
-findAll = select * from community order by comm_no
+#findAll = select * from community where substr(comm_no,1,3)in 'C30' order by comm_no
+findAll = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c) c where rnum between 11 and 20 and substr(comm_no,1,3) in 'C30'
 getTotalContent = select count(*) from community
 updateReadCount = update community set comm_read_count = comm_read_count + 1 where comm_no = ?
 findByNo = select * from community where comm_no = ?
