내 게시글 조회(커뮤니티) 기능 구현 완료
- footer에 margin-top 줘서 컨텐트 영역이랑 좀 띄워놨습니다
- 페이징 바 디자인
- 내 게시글 조회에서 게시글 없을 경우, 안내문구도 작성해두었습니다

--- a/src/main/resources/sql/mypage/mypage-query.properties
+++ b/src/main/resources/sql/mypage/mypage-query.properties
@@ -7,4 +7,5 @@ inquireListFindById = select * from ( select row_number() over(order by inquire_
 getTotalMyInquireContent = select count(*) from inquire where user_id = ?
 myInquireDelete = delete from inquire where inquire_no = ?
 communityListFindById = select * from (select row_number() over(order by comm_date desc) rnum, c.* from community c where user_id = ?) c where rnum between ? and ?
+totalMyCommunityContent = select count(*) from community where user_id = ?
 ##########janghoon query end##############
