상품 관리 조회,상세조회 완료! 공지사항,상품수정 작업중!

--- a/com/main/resources/sql/admin/admin-query.properties
+++ b/com/main/resources/sql/admin/admin-query.properties
@@ -2,9 +2,16 @@
 # admin-query.properties
 ######################################
 
-##########jaekyung query begin#############
-findAll = select * from ( select row_number () over (order by enroll_date desc) rnum, u.* from kh_user u ) u where rnum between ? and ?
-getTotalContent = select count(*) from kh_user
+##########adminpage select#############
+userFindAll = select * from ( select row_number () over (order by enroll_date desc) rnum, u.* from kh_user u ) u where rnum between ? and ?
+userGetTotalContent = select count(*) from kh_user
+
+##########adminpage search#############
 findUserLike = select * from ( select row_number () over (order by enroll_date desc) rnum, u.* from kh_user u where # like ?) u where rnum between ? and ?
-getTotalContentLike = select count(*) from kh_user where # like ?
-##########jaekyung query end#############
+userGetTotalContentLike = select count(*) from kh_user where # like ?
+
+##########productmanagement select#############
+productFindAll = select * from ( select row_number () over (order by pro_no desc) rnum, p.* from product p ) p where rnum between ? and ?
+productGetTotalContent = select count(*) from product
+
+
