--- a/src/main/resources/sql/admin/admin-query.properties
+++ b/src/main/resources/sql/admin/admin-query.properties
@@ -2,9 +2,27 @@
 # admin-query.properties
 ######################################
 
-##########jaekyung query begin#############
-findAll = select * from ( select row_number () over (order by enroll_date desc) rnum, u.* from kh_user u ) u where rnum between ? and ?
-getTotalContent = select count(*) from kh_user
+##########adminpage select#############
+userFindAll = select * from ( select row_number () over (order by enroll_date desc) rnum, u.* from kh_user u ) u where rnum between ? and ?
+userGetTotalContent = select count(*) from kh_user
+
+##########adminpage search#############
 findUserLike = select * from ( select row_number () over (order by enroll_date desc) rnum, u.* from kh_user u where # like ?) u where rnum between ? and ?
-getTotalContentLike = select count(*) from kh_user where # like ?
-##########jaekyung query end#############
+userGetTotalContentLike = select count(*) from kh_user where # like ?
+
+##########productmanagement#############
+productFindAll = select * from ( select row_number () over (order by pro_no desc) rnum, p.* from product p ) p where rnum between ? and ?
+productGetTotalContent = select count(*) from product
+findByProNo = select * from product where pro_no = ?
+findProductAttachmentByProductProNo = select * from product_attachment where pro_no = ?
+productAttachmentFindAll = select * from product_attachment
+productFind = select * from ( select row_number () over (order by reg_date desc) rnum, p.* from product p where pro_name like ? ) p where rnum between ? and ?
+productAlign = select * from ( select row_number () over (order by ? desc) rnum, p.* from product p) p where rnum between ? and ?
+
+##########Notice#############
+noticeFindAll = select * from notice order by notice_no
+noticeGetTotalContent = select count(*) from notice
+noticeupdateReadCount = update notice set notice_read_count = notice_read_count + 1 where notice_no = ?
+findByNoticeNo = select * from notice where notice_no = ?
+updateNoticeReadCount = update notice set notice_read_count = notice_read_count + 1 where notice_no = ?
+
