--- a/com/main/resources/sql/community/community-query.properties
+++ b/com/main/resources/sql/community/community-query.properties
@@ -3,7 +3,7 @@
 ##########################
 #findAll = select * from community where substr(comm_no,1,3)in 'C30' order by comm_no
 findAll = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c) c where rnum between 11 and 20 and substr(comm_no,1,3) in 'C30'
-getTotalContent = select count(*) from community
+getTotalContent = select count(*) from community where substr(comm_no,1,3) in 'C30'
 updateReadCount = update community set comm_read_count = comm_read_count + 1 where comm_no = ?
 findByNo = select * from community where comm_no = ?
 findCommunityCommentByCommNo = select * from comm_comment where comm_no = ? start with comm_comment_level = 1 connect by prior comm_no = comm_comment_ref order siblings by comm_comment_no asc
