--- a/src/main/resources/sql/user/user-query.properties
+++ b/src/main/resources/sql/user/user-query.properties
@@ -5,7 +5,7 @@
 ##########minseo query begin#############
 findById = select * from kh_user where user_id = ?
 editUser = update kh_user set  user_name = ?, user_birthday = ?,  user_phone = ? , user_email = ?, user_address =?  where user_id = ?
-
+findAll = select * from kh_user
 
 #updateMember = update member set member_name = ?, gender = ?, birthday = ?, email = ?, phone = ?, hobby = ? where member_id = ?
 ##########minseo query end#############
