--- a/src/main/resources/sql/inquire/inquire-query.properties
+++ b/src/main/resources/sql/inquire/inquire-query.properties
@@ -1,5 +1,9 @@
 #########################################
 ## inquire-query.properties #############
 #########################################
-findAll = select * from ( select row_number () over (order by inquire_date desc) rnum, m.* from inquire m ) m where rnum between ? and ?
+findAll = select * from (select row_number() over(order by inquire_date desc) rnum, i.*, (select count(*) from inquire inq where i.inquire_no = inq.inquire_answer_ref) answer_status from inquire i) i where rnum between ? and ?
 getTotalContent = select count(*) from inquire
+findInquireLike = select * from ( select row_number () over (order by inquire_date desc) rnum, m.* from inquire m where # like ?) m where rnum between ? and ?
+getTotalContentLike = select count(*) from inquire where # like ?
+findByNo = select * from inquire where inquire_no = ?
+deleteInquire = delete from inquire where inquire_no = ?
