--- a/com/main/resources/sql/community/community-query.properties
+++ b/com/main/resources/sql/community/community-query.properties
@@ -2,11 +2,14 @@
 # community-query.properties #
 ##########################
 #findAll = select * from community where substr(comm_no,1,3)in 'C30' order by comm_no
-findAll = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c) c where rnum between 11 and 20 and substr(comm_no,1,3) in 'C30'
+findAll = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c) c where rnum between ? and ? and substr(comm_no,1,3) in 'C30'
 getTotalContent = select count(*) from community where substr(comm_no,1,3) in 'C30'
 updateReadCount = update community set comm_read_count = comm_read_count + 1 where comm_no = ?
 findByNo = select * from community where comm_no = ?
-findCommunityCommentByCommNo = select * from comm_comment where comm_no = ? start with comm_comment_level = 1 connect by prior comm_no = comm_comment_ref order siblings by comm_comment_no asc
+findCommunityCommentByCommNo = select * from comm_comment where comm_no = ? start with comm_comment_level = 1 connect by prior comm_comment_no = comm_comment_ref order siblings by comm_comment_no asc
 updateReadCount = update community set comm_readCount = comm_readCount + 1 where comm_no = ?
-insertCommunityComment = insert into comm_comment values(seq_comm_comment_comm_comment_no.nextval, ?, ?, ?, default, ?, ?)
+insertCommunityComment = insert into comm_comment values('C31' || seq_comm_comment_comm_comment_no.nextval, ?, ?, ?, default, ?, ?)
 deleteCommunityComment = delete from comm_comment where comm_comment_no = ?
+insertCommunity = insert into community (comm_no, user_id, comm_title, comm_content) values ('C30' || seq_community_comm_no.nextval, ?, ?, ?)
+deleteCommunity = delete from community where comm_no = ?
+editCommunity = update community set comm_title = ?, comm_content = ? where comm_no = ?
