아이디, 이메일 중복검사 / 회원가입시 db에 주소 저장하는 구분자(+) 추가

--- a/src/main/resources/sql/user/user-query.properties
+++ b/src/main/resources/sql/user/user-query.properties
@@ -12,6 +12,7 @@ findAll = select * from kh_user
 
 ##########janghoon query begin#############
 insertUser = insert into kh_user values (?, default, ?, ?, ?, ?, ?, ?, default, default)
+findByEmail = select * from kh_user where user_email = ?
 ##########janghoon query end#############
 
 
