--- a/src/main/webapp/WEB-INF/classes/sql/user/user-query.properties
+++ b/src/main/webapp/WEB-INF/classes/sql/user/user-query.properties
@@ -12,6 +12,7 @@ findAll = select * from kh_user
 
 ##########janghoon query begin#############
 insertUser = insert into kh_user values (?, default, ?, ?, ?, ?, ?, ?, default, default)
+findByEmail = select * from kh_user where user_email = ?
 ##########janghoon query end#############
 
 
