--- a/src/main/resources/sql/inquire/inquire-query.properties
+++ b/src/main/resources/sql/inquire/inquire-query.properties
@@ -7,3 +7,5 @@ findInquireLike = select * from ( select row_number () over (order by inquire_da
 getTotalContentLike = select count(*) from inquire where # like ?
 findByNo = select * from inquire where inquire_no = ?
 deleteInquire = delete from inquire where inquire_no = ?
+insertInquire = insert into inquire (inquire_no, user_id, inquire_title, inquire_content, inquire_category) values ('S10' || seq_inquire_inquire_no.nextval, ?, ?, ?, ?)
+getLastInquireNo = select * from inquire where inquire_no = ?
