ADMIN PAGE 전체 CSS 일부 수정!

--- a/src/main/resources/sql/admin/admin-query.properties
+++ b/src/main/resources/sql/admin/admin-query.properties
@@ -10,19 +10,42 @@ userGetTotalContent = select count(*) from kh_user
 findUserLike = select * from ( select row_number () over (order by enroll_date desc) rnum, u.* from kh_user u where # like ?) u where rnum between ? and ?
 userGetTotalContentLike = select count(*) from kh_user where # like ?
 
-##########productmanagement#############
+##########productmanagement select#############
 productFindAll = select * from ( select row_number () over (order by pro_no desc) rnum, p.* from product p ) p where rnum between ? and ?
 productGetTotalContent = select count(*) from product
 findByProNo = select * from product where pro_no = ?
+findByProAttachmentNo = select * from board where pro_attachment_no = ?
 findProductAttachmentByProductProNo = select * from product_attachment where pro_no = ?
 productAttachmentFindAll = select * from product_attachment
 productFind = select * from ( select row_number () over (order by reg_date desc) rnum, p.* from product p where pro_name like ? ) p where rnum between ? and ?
 productAlign = select * from ( select row_number () over (order by ? desc) rnum, p.* from product p) p where rnum between ? and ?
 
-##########Notice#############
-noticeFindAll = select * from notice order by notice_no
-noticeGetTotalContent = select count(*) from notice
-noticeupdateReadCount = update notice set notice_read_count = notice_read_count + 1 where notice_no = ?
-findByNoticeNo = select * from notice where notice_no = ?
-updateNoticeReadCount = update notice set notice_read_count = notice_read_count + 1 where notice_no = ?
+##########productmanagement insert#############
+insertProduct = insert into product (pro_no,pro_type,pro_name,pro_price,pro_size,pro_content) values (# || seq_product_pro_no.nextval, ?, ?, ?, ?, ?)
+insertProductAttachment = insert into attachment values(seq_product_attachment_pro_attachment_no.nextval, ?, ?, ?) 
+getLastProNo = select seq_product_pro_no.currval from dual
+
+##########productmanagement update#############
+updateProduct = update board set pro_name = ?, pro_price = ?, pro_size = ?, pro_content = ? where pro_no = ?
+deleteProductAttachment = delete from attachment where pro_attachment_no = ?
+findProductAttachmentByProAttachmentNo = select * from product_attachment where pro_attachment_no = ?
+findProductAttachmentByProNo = select * from product_attachment where pro_no = ?
+
+##########productmanagement delete#############
+deleteBoard = delete from product where pro_no = ?
+
+##########requestManagement select#############
+inquireFindAll = select * from (select row_number() over(order by inquire_date desc) rnum, i.*, (select count(*) from inquire inq where i.inquire_no = inq.inquire_answer_ref) answer_status from inquire i) i where rnum between ? and ?
+inquireGetTotalContent = select count(*) from inquire
+
+##########requestManagement search#############
+findInquireLike = select * from ( select row_number () over (order by inquire_date desc) rnum, m.* from inquire m where # like ?) m where rnum between ? and ?
+inquireGetTotalContentLike = select count(*) from inquire where # like ?
+findByInquireNo = select * from inquire where inquire_no = ?
+
+##########requestManagement ext#############
+deleteInquire = delete from inquire where inquire_no = ?
+insertInquire = insert into inquire (inquire_no, user_id, inquire_title, inquire_content, inquire_category) values ('S10' || seq_inquire_inquire_no.nextval, ?, ?, ?, ?)
+getLastInquireNo = select * from inquire where inquire_no = ?
+
 
