--- a/src/main/resources/sql/review/review-query.properties
+++ b/src/main/resources/sql/review/review-query.properties
@@ -3,3 +3,4 @@
 ###############################
 findByReview = select * from ( select row_number () over (order by review_date desc) rnum, r.* from review r where pro_no = ? ) r where rnum between ? and ?
 getTotalReview = select count(*) from review where pro_no = ?
+favoriteAdd = update review set review_recommend = review_recommend + 1 where review_no = ?
