수정중..자러가기전에 붙잡힘;;

--- a/src/main/resources/sql/mypage/mypage-query.properties
+++ b/src/main/resources/sql/mypage/mypage-query.properties
@@ -15,4 +15,7 @@ myCommunityDelete = delete from community where comm_no = ?
 reviewListFindById = select * from (select row_number() over(order by review_date desc) rnum, r.* from review r where review_writer = ?) r where rnum between ? and ?
 totalMyReviewContent = select count(*) from review where review_writer = ?
 myReviewDelete = delete from review where review_no = ?
+
+orderListFindById = select * from (select row_number() over(order by order_date desc) rnum, o.* from kh_order o where user_id = ?) o where rnum between ? and ?
+totalMyOrderListContent = select count(*) from kh_order where user_id = ?
 ##########janghoon query end##############
