승원 오류해결용 커밋!

--- a/src/main/resources/sql/community/community-query.properties
+++ b/src/main/resources/sql/community/community-query.properties
@@ -11,3 +11,4 @@ updateReadCount = update community set comm_readCount = comm_readCount + 1 where
 insertCommunityComment = insert into comm_comment values('C31' || seq_comm_comment_comm_comment_no.nextval, ?, ?, ?, default, ?, ?)
 deleteCommunityComment = delete from comm_comment where comm_comment_no = ?
 insertCommunity = insert into community (comm_no, user_id, comm_title, comm_content) values ('C30' || seq_community_comm_no.nextval, ?, ?, ?)
+deleteCommunity = delete from community where comm_no = ?
