--- a/src/main/webapp/WEB-INF/classes/sql/user/user-query.properties
+++ b/src/main/webapp/WEB-INF/classes/sql/user/user-query.properties
@@ -6,6 +6,7 @@
 findById = select * from kh_user where user_id = ?
 editUser = update kh_user set  user_name = ?, user_birthday = ?,  user_phone = ? , user_email = ?, user_address =?  where user_id = ?
 findAll = select * from kh_user
+forgotId =  select * from kh_user where user_name= ? and user_email= ?
 
 #updateMember = update member set member_name = ?, gender = ?, birthday = ?, email = ?, phone = ?, hobby = ? where member_id = ?
 ##########minseo query end#############
