--- a/src/main/resources/sql/mypage/mypage-query.properties
+++ b/src/main/resources/sql/mypage/mypage-query.properties
@@ -18,4 +18,6 @@ myReviewDelete = delete from review where review_no = ?
 
 orderListFindById = select * from (select row_number() over(order by order_date desc) rnum, o.* from kh_order o where user_id = ?) o where rnum between ? and ?
 totalMyOrderListContent = select count(*) from kh_order where user_id = ?
+findByProNo = select * from product where pro_no = ?
+findAttachByProNo = select * from product_attachment where pro_no = ? and rownum = 1
 ##########janghoon query end##############
