--- a/src/main/resources/sql/admin/admin-query.properties
+++ b/src/main/resources/sql/admin/admin-query.properties
@@ -22,18 +22,17 @@ productAlign = select * from ( select row_number () over (order by ? desc) rnum,
 
 ##########productmanagement insert#############
 insertProduct = insert into product (pro_no,pro_type,pro_name,pro_price,pro_size,pro_content) values (# || seq_product_pro_no.nextval, ?, ?, ?, ?, ?)
-insertProductAttachment = insert into attachment values(seq_product_attachment_pro_attachment_no.nextval, ?, ?, ?) 
+insertProductAttachment = insert into product_attachment values(seq_product_attachment_pro_attachment_no.nextval, ?, ?, ?) 
 getLastProNo = select seq_product_pro_no.currval from dual
 
 ##########productmanagement update#############
 updateProduct = update board set pro_name = ?, pro_price = ?, pro_size = ?, pro_content = ? where pro_no = ?
 deleteProductAttachment = delete from attachment where pro_attachment_no = ?
 findProductAttachmentByProAttachmentNo = select * from product_attachment where pro_attachment_no = ?
-findProductAttachmentByProNo = select * from product_attachment where pro_no = ?
 
 ##########productmanagement delete#############
 deleteBoard = delete from product where pro_no = ?
-
+findProductAttachmentByProNo = select * from product_attachment where pro_no = ?
 ##########requestManagement select#############
 inquireFindAll = select * from (select row_number() over(order by inquire_date desc) rnum, i.*, (select count(*) from inquire inq where i.inquire_no = inq.inquire_answer_ref) answer_status from inquire i) i where rnum between ? and ?
 inquireGetTotalContent = select count(*) from inquire
