--- a/src/main/resources/sql/community/community-query.properties
+++ b/src/main/resources/sql/community/community-query.properties
@@ -12,3 +12,6 @@ insertCommunityComment = insert into comm_comment values('C31' || seq_comm_comme
 deleteCommunityComment = delete from comm_comment where comm_comment_no = ?
 insertCommunity = insert into community (comm_no, user_id, comm_title, comm_content) values ('C30' || seq_community_comm_no.nextval, ?, ?, ?)
 deleteCommunity = delete from community where comm_no = ?
+findAttachmentByCommNo = select * from comm_attachment where comm_no = ?
+insertAttachment = insert into comm_attachment values('C32' || seq_comm_attachment_comm_attachment_no.nextval, ?, ?, ?) 
+getLastCommNo = select 'C30' || seq_community_comm_no.currval from dual
