카트 기능 구현중, mypage css 몇가지 수정

--- a/src/main/resources/sql/cart/cart-query.properties
+++ b/src/main/resources/sql/cart/cart-query.properties
@@ -2,4 +2,4 @@
 ###### cart ###############
 ###########################
 
-cartAdd = insert into cart values (?, ?, ?, ?)
+cartAdd = insert into cart values (?, ?, ?, ?, default)
