--- a/src/main/resources/sql/mypage/mypage-query.properties
+++ b/src/main/resources/sql/mypage/mypage-query.properties
@@ -20,4 +20,6 @@ orderListFindById = select * from (select row_number() over(order by order_date 
 totalMyOrderListContent = select count(*) from kh_order where user_id = ?
 findByProNo = select * from product where pro_no = ?
 findAttachByProNo = select * from product_attachment where pro_no = ? and rownum = 1
+
+cartListFindById = select * from (select row_number() over(order by cart_date desc) rnum, ca.* from cart ca where user_id = ?) ca where rnum between ? and ?
 ##########janghoon query end##############
