--- a/src/main/resources/sql/community/community-query.properties
+++ b/src/main/resources/sql/community/community-query.properties
@@ -6,7 +6,7 @@ findAll = select * from (select row_number () over (order by comm_date desc)rnum
 getTotalContent = select count(*) from community where substr(comm_no,1,3) in 'C30'
 updateReadCount = update community set comm_read_count = comm_read_count + 1 where comm_no = ?
 findByNo = select * from community where comm_no = ?
-findCommunityCommentByCommNo = select * from comm_comment where comm_no = ? start with comm_comment_level = 1 connect by prior comm_no = comm_comment_ref order siblings by comm_comment_no asc
+findCommunityCommentByCommNo = select * from comm_comment where comm_no = ? start with comm_comment_level = 1 connect by prior comm_comment_no = comm_comment_ref order siblings by comm_comment_no asc
 updateReadCount = update community set comm_readCount = comm_readCount + 1 where comm_no = ?
 insertCommunityComment = insert into comm_comment values('C31' || seq_comm_comment_comm_comment_no.nextval, ?, ?, ?, default, ?, ?)
 deleteCommunityComment = delete from comm_comment where comm_comment_no = ?
