상품 상의 추가 구현 완료! 상품 하의 추가 및 수정 삭제 구현 진행중!

--- a/src/main/resources/sql/admin/admin-query.properties
+++ b/src/main/resources/sql/admin/admin-query.properties
@@ -21,9 +21,9 @@ productFind = select * from ( select row_number () over (order by reg_date desc)
 productAlign = select * from ( select row_number () over (order by ? desc) rnum, p.* from product p) p where rnum between ? and ?
 
 ##########productmanagement insert#############
-insertProduct = insert into product (pro_no,pro_type,pro_name,pro_price,pro_size,pro_content) values (# || seq_product_pro_no.nextval, ?, ?, ?, ?, ?)
+insertTopProduct = insert into product (pro_no,pro_type,pro_name,pro_price,pro_size,pro_content) values ('A10' || seq_product_pro_no.nextval, ?, ?, ?, ?, ?)
 insertProductAttachment = insert into product_attachment values(seq_product_attachment_pro_attachment_no.nextval, ?, ?, ?) 
-getLastProNo = select seq_product_pro_no.currval from dual
+getLastTopProNo = select 'A10' || seq_product_pro_no.currval from dual
 
 ##########productmanagement update#############
 updateProduct = update board set pro_name = ?, pro_price = ?, pro_size = ?, pro_content = ? where pro_no = ?
