코디 게시판 시작!

--- a/src/main/resources/sql/community/community-query.properties
+++ b/src/main/resources/sql/community/community-query.properties
@@ -15,3 +15,9 @@ deleteCommunity = delete from community where comm_no = ?
 findAttachmentByCommNo = select * from comm_attachment where comm_no = ?
 insertAttachment = insert into comm_attachment values('C32' || seq_comm_attachment_comm_attachment_no.nextval, ?, ?, ?) 
 getLastCommNo = select 'C30' || seq_community_comm_no.currval from dual
+
+
+
+
+
+############## codi ###########
