상품 등록 완료!

--- a/src/main/resources/sql/admin/admin-query.properties
+++ b/src/main/resources/sql/admin/admin-query.properties
@@ -21,9 +21,11 @@ productFind = select * from ( select row_number () over (order by reg_date desc)
 productAlign = select * from ( select row_number () over (order by ? desc) rnum, p.* from product p) p where rnum between ? and ?
 
 ##########productmanagement insert#############
-insertTopProduct = insert into product (pro_no,pro_type,pro_name,pro_price,pro_size,pro_content) values ('A10' || seq_product_pro_no.nextval, ?, ?, ?, ?, ?)
 insertProductAttachment = insert into product_attachment values(seq_product_attachment_pro_attachment_no.nextval, ?, ?, ?) 
+insertTopProduct = insert into product (pro_no,pro_type,pro_name,pro_price,pro_size,pro_content) values ('A10' || seq_product_pro_no.nextval, ?, ?, ?, ?, ?)
 getLastTopProNo = select 'A10' || seq_product_pro_no.currval from dual
+insertBottomProduct = insert into product (pro_no,pro_type,pro_name,pro_price,pro_size,pro_content) values ('A20' || seq_product_pro_no.nextval, ?, ?, ?, ?, ?)
+getLastBottomProNo = select 'A20' || seq_product_pro_no.currval from dual
 
 ##########productmanagement update#############
 updateProduct = update board set pro_name = ?, pro_price = ?, pro_size = ?, pro_content = ? where pro_no = ?
@@ -31,7 +33,7 @@ deleteProductAttachment = delete from attachment where pro_attachment_no = ?
 findProductAttachmentByProAttachmentNo = select * from product_attachment where pro_attachment_no = ?
 
 ##########productmanagement delete#############
-deleteBoard = delete from product where pro_no = ?
+deleteProduct = delete from product where pro_no = ?
 findProductAttachmentByProNo = select * from product_attachment where pro_no = ?
 ##########requestManagement select#############
 inquireFindAll = select * from (select row_number() over(order by inquire_date desc) rnum, i.*, (select count(*) from inquire inq where i.inquire_no = inq.inquire_answer_ref) answer_status from inquire i) i where rnum between ? and ?
