--- a/src/main/resources/sql/community/community-query.properties
+++ b/src/main/resources/sql/community/community-query.properties
@@ -21,9 +21,9 @@ getLastCommNo = select 'C30' || seq_community_comm_no.currval from dual
 
 
 ############## codi ###########
-findCodiAll = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c) c where rnum between ? and ? and substr(comm_no,1,3) in 'C20'
-findCodiAttachmentFindAll = select * from comm_attachment where substr (comm_no,1,3) in 'C20'
-getCodiTotalContent = select count(*) from community where substr(comm_no,1,3) in 'C20'
+findCodiAll = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c where comm_no like 'C20%') c where rnum between ? and ?
+findCodiAttachmentFindAll = select * from comm_attachment where comm_no like 'C20%'
+getCodiTotalContent = select count(*) from community where comm_no like 'C20%'
 codiCommentAdd = insert into comm_comment values('C21' || seq_comm_comment_comm_comment_no.nextval, ?, ?, ?, default, ?, ?)
 
 ################ recommendAdd ###########
