adminpage css 일부 수정 및 상품 등록,수정,삭제 진행중

--- a/src/main/resources/sql/admin/admin-query.properties
+++ b/src/main/resources/sql/admin/admin-query.properties
@@ -19,6 +19,9 @@ findProductAttachmentByProductProNo = select * from product_attachment where pro
 productAttachmentFindAll = select * from product_attachment
 productFind = select * from ( select row_number () over (order by reg_date desc) rnum, p.* from product p where pro_name like ? ) p where rnum between ? and ?
 productAlign = select * from ( select row_number () over (order by ? desc) rnum, p.* from product p) p where rnum between ? and ?
+productFind = select * from ( select row_number () over (order by reg_date desc) rnum, p.* from product p where pro_name like ? ) p where rnum between ? and ?
+productAlign = select * from ( select row_number () over (order by ? desc) rnum, p.* from product p) p where rnum between ? and ?
+productTypeFind = select * from (select row_number() over(order by pro_no desc) rnum, p.* from product p where pro_type = ? ) p where rnum between ? and ?
 
 ##########productmanagement insert#############
 insertProductAttachment = insert into product_attachment values(seq_product_attachment_pro_attachment_no.nextval, ?, ?, ?) 
@@ -28,13 +31,14 @@ insertBottomProduct = insert into product (pro_no,pro_type,pro_name,pro_price,pr
 getLastBottomProNo = select 'A20' || seq_product_pro_no.currval from dual
 
 ##########productmanagement update#############
-updateProduct = update board set pro_name = ?, pro_price = ?, pro_size = ?, pro_content = ? where pro_no = ?
-deleteProductAttachment = delete from attachment where pro_attachment_no = ?
+updateProduct = update product set pro_name = ?, pro_price = ?, pro_size = ?, pro_content = ? where pro_no = ?
+deleteProductAttachment = delete from product_attachment where pro_attachment_no = ?
 findProductAttachmentByProAttachmentNo = select * from product_attachment where pro_attachment_no = ?
 
 ##########productmanagement delete#############
 deleteProduct = delete from product where pro_no = ?
 findProductAttachmentByProNo = select * from product_attachment where pro_no = ?
+
 ##########requestManagement select#############
 inquireFindAll = select * from (select row_number() over(order by inquire_date desc) rnum, i.*, (select count(*) from inquire inq where i.inquire_no = inq.inquire_answer_ref) answer_status from inquire i) i where rnum between ? and ?
 inquireGetTotalContent = select count(*) from inquire
