커밋커밋 코디북 삭제 수정 !!

--- a/src/main/resources/sql/community/community-query.properties
+++ b/src/main/resources/sql/community/community-query.properties
@@ -25,6 +25,10 @@ findCodiAll = select * from (select row_number () over (order by comm_date desc)
 findCodiAttachmentFindAll = select * from comm_attachment where comm_no like 'C20%'
 getCodiTotalContent = select count(*) from community where comm_no like 'C20%'
 codiCommentAdd = insert into comm_comment values('C21' || seq_comm_comment_comm_comment_no.nextval, ?, ?, ?, default, ?, ?)
+findCodiAttachmentByNo = select * from comm_attachment where comm_attachment_no = ?
+deleteCodiAttachment = delete from comm_attachment where comm_attachment_no = ?
+insertCodiAttachment = insert into comm_attachment values('C22'||seq_comm_attachment_comm_attachment_no.nextval, ?, ?, ?)
+codiEdit = update community set comm_title =?, comm_content = ? where comm_no = ?
 
 ################ recommendAdd ###########
 recommendAdd = update community set comm_recommend = comm_recommend +1 where comm_no = ?
