--- a/src/main/resources/sql/community/community-query.properties
+++ b/src/main/resources/sql/community/community-query.properties
@@ -29,6 +29,7 @@ findCodiAttachmentByNo = select * from comm_attachment where comm_attachment_no 
 deleteCodiAttachment = delete from comm_attachment where comm_attachment_no = ?
 insertCodiAttachment = insert into comm_attachment values('C22'||seq_comm_attachment_comm_attachment_no.nextval, ?, ?, ?)
 codiEdit = update community set comm_title =?, comm_content = ? where comm_no = ?
-
+codiAdd = insert into community values('C20'||seq_community_comm_no.nextval, ?, ?, ?,default,default,default)
+getLastCodiCommNo = select 'C20' || seq_community_comm_no.currval from dual
 ################ recommendAdd ###########
 recommendAdd = update community set comm_recommend = comm_recommend +1 where comm_no = ?
