--- a/src/main/resources/sql/community/community-query.properties
+++ b/src/main/resources/sql/community/community-query.properties
@@ -2,7 +2,7 @@
 # community-query.properties #
 ##########################
 #findAll = select * from community where substr(comm_no,1,3)in 'C30' order by comm_no
-findAll = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c) c where rnum between ? and ? and substr(comm_no,1,3) in 'C30'
+findAll = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c where comm_no like 'C30%') c where rnum between ? and ?
 getTotalContent = select count(*) from community where substr(comm_no,1,3) in 'C30'
 updateReadCount = update community set comm_read_count = comm_read_count + 1 where comm_no = ?
 findByNo = select * from community where comm_no = ?
@@ -31,5 +31,18 @@ insertCodiAttachment = insert into comm_attachment values('C22'||seq_comm_attach
 codiEdit = update community set comm_title =?, comm_content = ? where comm_no = ?
 codiAdd = insert into community values('C20'||seq_community_comm_no.nextval, ?, ?, ?,default,default,default)
 getLastCodiCommNo = select 'C20' || seq_community_comm_no.currval from dual
+
 ################ recommendAdd ###########
 recommendAdd = update community set comm_recommend = comm_recommend +1 where comm_no = ?
+
+
+############### free ###########
+findFreeAll = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c where comm_no like 'C40%') c where rnum between ? and ?
+findByFreeNo = select * from community where comm_no = ? and substr(comm_no,1,3) in 'C40'
+insertFree = insert into community (comm_no, user_id, comm_title, comm_content) values ('C40' || seq_community_comm_no.nextval, ?, ?, ?)
+getLastFreeNo = select 'C40' || seq_community_comm_no.currval from dual
+insertFreeAttachment = insert into comm_attachment values('C42' || seq_comm_attachment_comm_attachment_no.nextval, ?, ?, ?)
+insertFreeComment = insert into comm_comment values('C41' || seq_comm_comment_comm_comment_no.nextval, ?, ?, ?, default, ?, ?)
+deleteFreeComment = delete from comm_comment where comm_comment_no = ?
+editFree = update community set comm_title = ?, comm_content = ? where comm_no = ?
+deleteFree = delete from community where comm_no = ?
