--- a/src/main/resources/sql/favorite/favorite-query.properties
+++ b/src/main/resources/sql/favorite/favorite-query.properties
@@ -1,4 +1,5 @@
 #################################
 ## favorite #####################
 #################################
-favoriteAdd = insert into favorite values(?,?)
+favoriteAdd = insert into favorite values(?,?, default)
+proByFavorite = select count(*) from favorite where pro_no = ? 
