--- a/src/main/resources/sql/product/product-query.properties
+++ b/src/main/resources/sql/product/product-query.properties
@@ -7,6 +7,6 @@ getTotalContent = select count(*) from product
 findByProNo = select * from product where pro_no = ?
 findProductAttachmentByProductProNo = select * from product_attachment where pro_no = ?
 productAttachmentFindAll = select * from product_attachment
-productFind = select * from ( select row_number () over (order by reg_date desc) rnum, p.* from product p where pro_name like ? ) p where rnum between ? and ?
-productAlign = select * from ( select row_number () over (order by ? desc) rnum, p.* from product p) p where rnum between ? and ?
-productTypeFind = select * from (select row_number() over(order by pro_no desc) rnum, p.* from product p where pro_type = ? ) p where rnum between ? and ?
+productSearch = select * from ( select row_number () over (order by reg_date desc) rnum, p.* from product p where pro_type = ? and pro_name like ? ) p where rnum between ? and ?
+productAlign = select * from ( select row_number () over (order by # desc) rnum, p.* from product p where pro_type = ?) p where rnum between ? and ?
+productTypeFind = select * from (select row_number() over(order by reg_date desc) rnum, p.* from product p where pro_type = ?) p where rnum between ? and ?
