코디북 검색 정렬 완료

--- a/src/main/resources/sql/community/community-query.properties
+++ b/src/main/resources/sql/community/community-query.properties
@@ -31,6 +31,8 @@ insertCodiAttachment = insert into comm_attachment values('C22'||seq_comm_attach
 codiEdit = update community set comm_title =?, comm_content = ? where comm_no = ?
 codiAdd = insert into community values('C20'||seq_community_comm_no.nextval, ?, ?, ?,default,default,default)
 getLastCodiCommNo = select 'C20' || seq_community_comm_no.currval from dual
+codiAlign = select * from (select row_number () over (order by # desc)rnum, c.* from community c where comm_no like 'C20%') c where rnum between ? and ?
+codiSearch = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c where comm_no like 'C20%' and comm_title like ?) c where rnum between ? and ?
 
 ################ recommendAdd ###########
 recommendAdd = update community set comm_recommend = comm_recommend +1 where comm_no = ?
