상품 등록,수정,삭제 진행중

--- a/src/main/resources/sql/admin/admin-query.properties
+++ b/src/main/resources/sql/admin/admin-query.properties
@@ -31,7 +31,7 @@ insertBottomProduct = insert into product (pro_no,pro_type,pro_name,pro_price,pr
 getLastBottomProNo = select 'A20' || seq_product_pro_no.currval from dual
 
 ##########productmanagement update#############
-updateProduct = update product set pro_name = ?, pro_price = ?, pro_size = ?, pro_content = ? where pro_no = ?
+productEdit = update product set pro_name = ?, pro_price = ?, pro_size = ?, pro_content = ? where pro_no = ?
 deleteProductAttachment = delete from product_attachment where pro_attachment_no = ?
 findProductAttachmentByProAttachmentNo = select * from product_attachment where pro_attachment_no = ?
 
