장바구니 기능(삭제, 수량변경) 구현, 관심상품 등록 수정, 마이페이지 몇가지 추가 수정!

--- a/src/main/resources/sql/cart/cart-query.properties
+++ b/src/main/resources/sql/cart/cart-query.properties
@@ -2,4 +2,4 @@
 ###### cart ###############
 ###########################
 
-cartAdd = insert into cart values (?, ?, ?, ?, default)
+cartAdd = merge into cart c using dual on (c.user_id = ? and c.pro_no = ? and c.cart_size = ?) when matched then update set c.cart_buy_stock = c.cart_buy_stock + ?, c.cart_date = current_date when not matched then insert (c.user_id, c.pro_no, c.cart_buy_stock, c.cart_size, c.cart_date) values (?, ?, ?, ?, default)
