--- a/src/main/resources/sql/favorite/favorite-query.properties
+++ b/src/main/resources/sql/favorite/favorite-query.properties
@@ -1,4 +1,4 @@
 #################################
 ## favorite #####################
 #################################
-favoriteAdd = insert into favorite values(?,?)
+favoriteAdd = merge into favorite f using dual on (f.user_id = ? and f.pro_no = ?) when not matched then insert (f.pro_no, f.user_id, f.fav_date) values (?, ?, default)
