--- a/src/main/resources/sql/mypage/mypage-query.properties
+++ b/src/main/resources/sql/mypage/mypage-query.properties
@@ -22,7 +22,9 @@ findByProNo = select * from product where pro_no = ?
 findAttachByProNo = select * from product_attachment where pro_no = ? and rownum = 1
 
 cartListFindById = select * from (select row_number() over(order by cart_date desc) rnum, ca.* from cart ca where user_id = ?) ca where rnum between ? and ?
-editStock = update cart set cart_buy_stock = ? where user_id = ? and pro_no = ? 
+totalMyCartListContent = select count(*) from cart where user_id = ?
+editStock = update cart set cart_buy_stock = ? where user_id = ? and pro_no = ?
+myCartDelete = delete from cart where user_id = ? and pro_no = ? and cart_size = ?
 
 favListFindById = select distinct pro_no from (select row_number() over(order by fav_date desc) rnum, f.* from favorite f where user_id = ?) f where rnum between ? and ?
 totalMyFavListContent = select count(distinct pro_no) from favorite where user_id = ?
