--- a/src/main/resources/sql/admin/admin-query.properties
+++ b/src/main/resources/sql/admin/admin-query.properties
@@ -53,8 +53,10 @@ deleteInquire = delete from inquire where inquire_no = ?
 insertInquire = insert into inquire (inquire_no, user_id, inquire_title, inquire_content, inquire_category) values ('S10' || seq_inquire_inquire_no.nextval, ?, ?, ?, ?)
 getLastInquireNo = select * from inquire where inquire_no = ?
 
-##########requestManagement select#############
+##########orderManagement select#############
 orderFindAll = select * from ( select row_number () over (order by order_no desc) rnum, o.* from kh_order o ) o where rnum between ? and ?
 orderGetTotalContent = select count(*) from kh_order
 
+##########orderManagement edit#############
+editOrderStatus = update kh_order set order_status = ? where order_no = ?
 
