--- a/src/main/resources/sql/admin/admin-query.properties
+++ b/src/main/resources/sql/admin/admin-query.properties
@@ -25,7 +25,7 @@ productTypeFind = select * from (select row_number() over(order by pro_no desc) 
 
 ##########productmanagement insert#############
 insertProductAttachment = insert into product_attachment values(seq_product_attachment_pro_attachment_no.nextval, ?, ?, ?) 
-insertProduct = insert into product (pro_no,pro_type,pro_name,pro_price,pro_size,pro_content) values ('A10' || seq_product_pro_no.nextval, ?, ?, ?, ?, ?)
+insertTopProduct = insert into product (pro_no,pro_type,pro_name,pro_price,pro_size,pro_content) values ('A10' || seq_product_pro_no.nextval, ?, ?, ?, ?, ?)
 getLastTopProNo = select 'A10' || seq_product_pro_no.currval from dual
 insertBottomProduct = insert into product (pro_no,pro_type,pro_name,pro_price,pro_size,pro_content) values ('A20' || seq_product_pro_no.nextval, ?, ?, ?, ?, ?)
 getLastBottomProNo = select 'A20' || seq_product_pro_no.currval from dual
