--- a/src/main/resources/sql/admin/admin-query.properties
+++ b/src/main/resources/sql/admin/admin-query.properties
@@ -24,10 +24,10 @@ productAlign = select * from ( select row_number () over (order by ? desc) rnum,
 productTypeFind = select * from (select row_number() over(order by pro_no desc) rnum, p.* from product p where pro_type = ? ) p where rnum between ? and ?
 
 ##########productmanagement insert#############
-insertProductAttachment = insert into product_attachment values(seq_product_attachment_pro_attachment_no.nextval, ?, ?, ?) 
-insertTopProduct = insert into product (pro_no,pro_type,pro_name,pro_price,pro_size,pro_content) values ('A10' || seq_product_pro_no.nextval, ?, ?, ?, ?, ?)
+insertProductAttachment = insert into product_attachment values (seq_product_attachment_pro_attachment_no.nextval, ?, ?, ?) 
+insertTopProduct = insert into product values ('A10' || seq_product_pro_no.nextval, ?, ?, ?, ?, default, ?)
 getLastTopProNo = select 'A10' || seq_product_pro_no.currval from dual
-insertBottomProduct = insert into product (pro_no,pro_type,pro_name,pro_price,pro_size,pro_content) values ('A20' || seq_product_pro_no.nextval, ?, ?, ?, ?, ?)
+insertBottomProduct = insert into product values ('A20'||seq_product_pro_no.nextval,?,?,?,?,default,?)
 getLastBottomProNo = select 'A20' || seq_product_pro_no.currval from dual
 
 ##########productmanagement update#############
