--- a/src/main/resources/sql/user/user-query.properties
+++ b/src/main/resources/sql/user/user-query.properties
@@ -8,8 +8,9 @@ editUser = update kh_user set  user_name = ?, user_birthday = ?,  user_phone = ?
 findAll = select * from kh_user
 forgotId =  select * from kh_user where user_name= ? and user_email= ?
 forgotPwd = select * from kh_user where user_id = ? and user_name= ? and user_email= ?
+updatePwd =  update kh_user set user_pwd =?  where user_id = ? and user_name = ? and user_email = ?
 
-#updateMember = update member set member_name = ?, gender = ?, birthday = ?, email = ?, phone = ?, hobby = ? where member_id = ?
+
 ##########minseo query end#############
 
 ##########janghoon query begin#############
