--- a/src/main/webapp/WEB-INF/classes/sql/user/user-query.properties
+++ b/src/main/webapp/WEB-INF/classes/sql/user/user-query.properties
@@ -8,7 +8,7 @@ editUser = update kh_user set  user_name = ?, user_birthday = ?,  user_phone = ?
 findAll = select * from kh_user
 forgotId =  select * from kh_user where user_name= ? and user_email= ?
 forgotPwd = select * from kh_user where user_id = ? and user_name= ? and user_email= ?
-updatePwd =  update kh_user set user_pwd =?  where user_id = ? and user_name = ? and user_email = ?
+updatePwd =  update kh_user set user_pwd =?  where user_id = ?
 
 
 ##########minseo query end#############
