--- a/src/main/resources/sql/community/community-query.properties
+++ b/src/main/resources/sql/community/community-query.properties
@@ -3,22 +3,23 @@
 ##########################
 #findAll = select * from community where substr(comm_no,1,3)in 'C30' order by comm_no
 findAll = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c where comm_no like 'C30%') c where rnum between ? and ?
-getTotalContent = select count(*) from community where substr(comm_no,1,3) in 'C30'
-updateReadCount = update community set comm_read_count = comm_read_count + 1 where comm_no = ?
 findByNo = select * from community where comm_no = ?
 findCommunityCommentByCommNo = select * from comm_comment where comm_no = ? start with comm_comment_level = 1 connect by prior comm_comment_no = comm_comment_ref order siblings by comm_comment_no asc
+findAttachmentByNo = select * from comm_attachment where comm_attachment_no = ?
+findAttachmentByCommNo = select * from comm_attachment where comm_no = ?
+getTotalContent = select count(*) from community where substr(comm_no,1,3) in 'C30'
+#updateReadCount = update community set comm_read_count = comm_read_count + 1 where comm_no = ?
 updateReadCount = update community set comm_readCount = comm_readCount + 1 where comm_no = ?
 insertCommunityComment = insert into comm_comment values('C31' || seq_comm_comment_comm_comment_no.nextval, ?, ?, ?, default, ?, ?)
 deleteCommunityComment = delete from comm_comment where comm_comment_no = ?
 insertCommunity = insert into community (comm_no, user_id, comm_title, comm_content) values ('C30' || seq_community_comm_no.nextval, ?, ?, ?)
 deleteCommunity = delete from community where comm_no = ?
-findAttachmentByCommNo = select * from comm_attachment where comm_no = ?
+deleteAttachment = delete from comm_attachment where comm_attachment_no = ?
 insertAttachment = insert into comm_attachment values('C32' || seq_comm_attachment_comm_attachment_no.nextval, ?, ?, ?) 
 getLastCommNo = select 'C30' || seq_community_comm_no.currval from dual
-
-
-
-
+editCommunity = update community set comm_title = ?, comm_content = ? where comm_no = ?
+communitySearch = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c where comm_no like 'C30%' and comm_title like ?) c where rnum between ? and ?
+communityAlign = select * from (select row_number () over (order by # desc)rnum, c.* from community c where comm_no like 'C30%') c where rnum between ? and ?
 
 ############## codi ###########
 findCodiAll = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c where comm_no like 'C20%') c where rnum between ? and ?
@@ -40,11 +41,48 @@ recommendAdd = update community set comm_recommend = comm_recommend +1 where com
 
 ############### free ###########
 findFreeAll = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c where comm_no like 'C40%') c where rnum between ? and ?
-findByFreeNo = select * from community where comm_no = ? and substr(comm_no,1,3) in 'C40'
+findFreeByNo = select * from community where comm_no = ?
+findFreeCommentByCommNo = select * from comm_comment where comm_no = ? start with comm_comment_level = 1 connect by prior comm_comment_no = comm_comment_ref order siblings by comm_comment_no asc
+findFreeAttachmentByNo = select * from comm_attachment where comm_attachment_no = ?
+findFreeAttachmentByCommNo = select * from comm_attachment where comm_no = ?
+updateFreeReadCount = update community set comm_readCount = comm_readCount + 1 where comm_no = ?
 insertFree = insert into community (comm_no, user_id, comm_title, comm_content) values ('C40' || seq_community_comm_no.nextval, ?, ?, ?)
-getLastFreeNo = select 'C40' || seq_community_comm_no.currval from dual
-insertFreeAttachment = insert into comm_attachment values('C42' || seq_comm_attachment_comm_attachment_no.nextval, ?, ?, ?)
+getFreeLastCommNo = select 'C50' || seq_community_comm_no.currval from dual
+insertFreeAttachment = insert into comm_attachment values('C52' || seq_comm_attachment_comm_attachment_no.nextval, ?, ?, ?)
+editFree = update community set comm_title = ?, comm_content = ? where comm_no = ?
+deleteFreeAttachment = delete from comm_attachment where comm_attachment_no = ?
+deleteFree = delete from community where comm_no = ?
 insertFreeComment = insert into comm_comment values('C41' || seq_comm_comment_comm_comment_no.nextval, ?, ?, ?, default, ?, ?)
 deleteFreeComment = delete from comm_comment where comm_comment_no = ?
-editFree = update community set comm_title = ?, comm_content = ? where comm_no = ?
-deleteFree = delete from community where comm_no = ?
+freeAlign = select * from (select row_number () over (order by # desc)rnum, c.* from community c where comm_no like 'C40%') c where rnum between ? and ?
+getFreeTotalContent = select count(*) from community where comm_no like 'C40%'
+freeSearch = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c where comm_no like 'C40%' and comm_title like ?) c where rnum between ? and ?
+
+
+
+
+################ talk ####################
+findTalkAll = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c where comm_no like 'C50%') c where rnum between ? and ?
+findTalkByNo = select * from community where comm_no = ?
+findTalkCommentByCommNo = select * from comm_comment where comm_no = ? start with comm_comment_level = 1 connect by prior comm_comment_no = comm_comment_ref order siblings by comm_comment_no asc
+findTalkAttachmentByNo = select * from comm_attachment where comm_attachment_no = ?
+findTalkAttachmentByCommNo = select * from comm_attachment where comm_no = ?
+updateTalkReadCount = update community set comm_readCount = comm_readCount + 1 where comm_no = ?
+insertTalk = insert into community (comm_no, user_id, comm_title, comm_content) values ('C50' || seq_community_comm_no.nextval, ?, ?, ?)
+getTalkLastCommNo = select 'C50' || seq_community_comm_no.currval from dual
+insertTalkAttachment = insert into comm_attachment values('C52' || seq_comm_attachment_comm_attachment_no.nextval, ?, ?, ?)
+editTalk = update community set comm_title = ?, comm_content = ? where comm_no = ?
+deleteTalkAttachment = delete from comm_attachment where comm_attachment_no = ?
+deleteTalk = delete from community where comm_no = ?
+insertTalkComment = insert into comm_comment values('C51' || seq_comm_comment_comm_comment_no.nextval, ?, ?, ?, default, ?, ?)
+deleteTalkComment = delete from comm_comment where comm_comment_no = ?
+talkAlign = select * from (select row_number () over (order by # desc)rnum, c.* from community c where comm_no like 'C50%') c where rnum between ? and ?
+getTalkTotalContent = select count(*) from community where comm_no like 'C50%'
+talkSearch = select * from (select row_number () over (order by comm_date desc)rnum, c.* from community c where comm_no like 'C50%' and comm_title like ?) c where rnum between ? and ?
+
+
+
+
+
+
+
