비밀번호 수정 완료 !

--- a/src/main/resources/sql/user/user-query.properties
+++ b/src/main/resources/sql/user/user-query.properties
@@ -9,7 +9,7 @@ findAll = select * from kh_user
 forgotId =  select * from kh_user where user_name= ? and user_email= ?
 forgotPwd = select * from kh_user where user_id = ? and user_name= ? and user_email= ?
 updatePwd =  update kh_user set user_pwd =?  where user_id = ?
-
+editPassword =  update kh_user set user_pwd =?  where user_id = ? and user_pwd = ?
 
 ##########minseo query end#############
 
