회원탈퇴 기능 구현!, 로그인 탈퇴여부 검사!

--- a/src/main/resources/sql/user/user-query.properties
+++ b/src/main/resources/sql/user/user-query.properties
@@ -16,6 +16,7 @@ updatePwd =  update kh_user set user_pwd =?  where user_id = ?
 ##########janghoon query begin#############
 insertUser = insert into kh_user values (?, default, ?, ?, ?, ?, ?, ?, default, default)
 findByEmail = select * from kh_user where user_email = ?
+deleteById = update kh_user set user_del = 'Y' where user_id = ?
 ##########janghoon query end#############
 
 
