페이징수정이랑 이것 저것쌀짝씩!!

--- a/src/main/resources/sql/product/product-query.properties
+++ b/src/main/resources/sql/product/product-query.properties
@@ -4,6 +4,8 @@
 
 contentFindAll = select * from (select row_number() over(order by pro_no desc) rnum, p.* from product p) p where rnum between ? and ?
 getTotalContent = select count(*) from product
+getTopTotalContent = select count(*) from product where pro_no like 'A10%'
+getBottomTotalContent = select count(*) from product where pro_no like 'A20%'
 findByProNo = select * from product where pro_no = ?
 findProductAttachmentByProductProNo = select * from product_attachment where pro_no = ?
 productAttachmentFindAll = select * from product_attachment
