리뷰작성 기능 구현, 주문 페이지 주소 수정 등등등...

--- a/src/main/resources/sql/mypage/mypage-query.properties
+++ b/src/main/resources/sql/mypage/mypage-query.properties
@@ -28,4 +28,6 @@ myCartDelete = delete from cart where user_id = ? and pro_no = ? and cart_size =
 
 favListFindById = select distinct pro_no from (select row_number() over(order by fav_date desc) rnum, f.* from favorite f where user_id = ?) f where rnum between ? and ?
 totalMyFavListContent = select count(distinct pro_no) from favorite where user_id = ?
+
+reviewAdd = insert into review values ('R10'||seq_review_review_no.nextval, ?, ?, ?, ?, ?, ?, default, default)
 ##########janghoon query end##############
